--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
 .App {
+  align-items: center;
+  background-color: #18191d;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  font-size: 18px;
+  min-height: 100vh;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 20px 0 40px;
 }
 
-.App-link {
-  color: #61dafb;
+.example-block-columns {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin: 0 0 10px 0;
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.example-section {
+  background-color: #282c34;
+  border-radius: 5px;
+  box-shadow: 
+    0.3px 0.5px 0.7px hsl(220deg 21% 8%),
+    0.8px 1.6px 2px -0.8px hsl(220deg 21% 8%),
+    2.1px 4.1px 5.2px -1.7px hsl(220deg 21% 8%);
+  margin: 20px;
+  padding: 20px 0;
+  width: 80%;
+}
+
+.visual-queue-container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+p {
+  font-size: 18px;
+  margin: 0;
 }
