Install prettier, format repo, added pull request template, install eslint, add linter rules, lint repo, implement format/lint on commit, and reformat disabled button logic

--- a/src/AudioQueueVisualizer/AudioQueueVisualizer.css
+++ b/src/AudioQueueVisualizer/AudioQueueVisualizer.css
@@ -1,7 +1,10 @@
 .audio-queue-container {
   background-color: #ffffff;
   border-radius: 5px;
-  box-shadow: 0.3px 0.5px 0.7px hsl(220deg 21% 8%), 0.8px 1.6px 2px -0.8px hsl(220deg 21% 8%), 2.1px 4.1px 5.2px -1.7px hsl(220deg 21% 8%);
+  box-shadow:
+    0.3px 0.5px 0.7px hsl(220deg 21% 8%),
+    0.8px 1.6px 2px -0.8px hsl(220deg 21% 8%),
+    2.1px 4.1px 5.2px -1.7px hsl(220deg 21% 8%);
   height: 200px;
   margin: 20px auto;
   overflow-y: scroll;
