--- a/src/AudioQueueVisualizer/AudioQueueVisualizer.css
+++ b/src/AudioQueueVisualizer/AudioQueueVisualizer.css
@@ -1,5 +1,5 @@
 .audio-queue-container {
-  background-color: #ffffff;
+  background-color: #fff;
   border-radius: 5px;
   box-shadow:
     0.3px 0.5px 0.7px hsl(220deg 21% 8%),
