--- a/src/HeaderAndDescription/HeaderAndDescription.css
+++ b/src/HeaderAndDescription/HeaderAndDescription.css
@@ -1,13 +1,13 @@
 .description {
   display: flex;
-  margin: 0 0 10px 0;
+  margin: 0 0 10px;
   text-align: left;
 }
 
 .description-container {
   display: flex;
   flex-direction: column;
-  margin: 20px 0 10px 0;
+  margin: 20px 0 10px;
   width: 1000px;
 }
 
