break apart examples into their own tabs with a tab menu

--- a/src/App.css
+++ b/src/App.css
@@ -9,23 +9,15 @@
   text-align: center;
 }
 
-.example-block-columns {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  margin-bottom: 10px;
-  width: 100%;
-}
-
-.example-section {
+.example-container {
   background-color: #282c34;
+  border: 1px solid #61dafb;
   border-radius: 5px;
   box-shadow:
     0.3px 0.5px 0.7px hsl(220deg 21% 8%),
     0.8px 1.6px 2px -0.8px hsl(220deg 21% 8%),
     2.1px 4.1px 5.2px -1.7px hsl(220deg 21% 8%);
   margin: 20px;
-  padding: 20px 0;
   width: 80%;
 }
 
