--- a/src/MultiChannelExampleBlock/MultiChannelExampleBlock.css
+++ b/src/MultiChannelExampleBlock/MultiChannelExampleBlock.css
@@ -7,11 +7,11 @@
     0.8px 1.6px 2px -0.8px hsl(220deg 21% 8%);
   color: #fff;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 600;
   height: 66px;
   margin: 0 0 10px;
-  max-width: 300px;
+  max-width: 250px;
   padding: 10px 20px;
 }
 
@@ -19,6 +19,7 @@
   background-color: #ccc;
   color: #666;
   cursor: not-allowed;
+  white-space: pre-wrap;
 }
 
 .example-block {
@@ -33,11 +34,19 @@
   flex-direction: column;
   justify-content: center;
   margin: 0 20px 20px;
-  padding: 30px 20px;
+  min-width: 275px;
+  padding: 20px 10px;
 }
 
 .example-block-section {
   align-items: center;
   display: flex;
   flex-direction: column;
+}
+
+@media (1px <= width <= 800px) {
+  .example-block {
+    margin: 0 20px 20px;
+    min-width: 275px;
+  }
 }
